:sparkles: feat: Finished part of gymnasium implementation